[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprite/receive1.png" type="Texture" id=1]
[ext_resource path="res://sprite/idle.png" type="Texture" id=2]
[ext_resource path="res://sprite/jump_attack.png" type="Texture" id=3]
[ext_resource path="res://sprite/receive2.png" type="Texture" id=4]
[ext_resource path="res://sprite/jump_ready.png" type="Texture" id=5]
[ext_resource path="res://script/enemy_remake.gd" type="Script" id=6]
[ext_resource path="res://sprite/remake/minis/player_animation/idle1.png" type="Texture" id=7]
[ext_resource path="res://font/Silver.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprite/remake/chat_box.png" type="Texture" id=9]
[ext_resource path="res://sprite/remake/chat_box_tail.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": false,
"name": "receive",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.6487, 30.4854 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.5257
height = 45.5956

[sub_resource type="Animation" id=5]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.498039 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.866667, 0.231373, 0.231373, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=48]
size = 26
extra_spacing_bottom = -10
font_data = ExtResource( 8 )

[node name="enemy_body" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 16
collision_mask = 0
script = ExtResource( 6 )

[node name="sprite" type="AnimatedSprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -136 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.6352, 0 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="hurt_zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 104

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_zone"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 3 )

[node name="hitted_anim" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/hitted = SubResource( 5 )
anims/reset = SubResource( 6 )

[node name="Timer" type="Timer" parent="hitted_anim"]
wait_time = 2.0

[node name="hp_bar" type="ProgressBar" parent="."]
margin_left = -60.4569
margin_top = 77.7615
margin_right = 52.5431
margin_bottom = 91.7615
mouse_filter = 2
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_anim" type="AnimationPlayer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="chat" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chat_box" type="GridContainer" parent="chat"]
visible = false
margin_left = -11.0
margin_top = -112.0
margin_right = 9.0
margin_bottom = -88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="chat/chat_box"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 24 )
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nine_patch" type="NinePatchRect" parent="chat/chat_box/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -10.0
margin_right = 9.0
margin_bottom = 6.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 11, 11 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chat_box_tail" type="TextureRect" parent="chat/chat_box/Label/nine_patch"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.5
margin_top = -3.0
margin_right = 6.5
margin_bottom = 12.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="chat"]
wait_time = 2.0
[connection signal="timeout" from="hitted_anim/Timer" to="." method="hitted_timeout"]
[connection signal="resized" from="chat/chat_box/Label" to="." method="chat_Label_resized"]
[connection signal="timeout" from="chat/Timer" to="." method="chat_timeout"]
